# Chronos

./: .gitignore  ASSEMBLY_IMPLEMENTATION.md  CHANGELOG.md  CURRENT_STATUS.md  EXPANSION_ROADMAP.md  FASE2_100_PERCENT.md  FASE2_COMPLETE.md  IMPLEMENTATION_PLAN.md  MEMORY_MANAGEMENT.md  PARSER_MEJORADO.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY_FIXES_v0.18.md  SELF_HOSTING_COMPLETE.md  SESSION_SUMMARY_2025_10_30.md  V1_PLAN.md  run_tests.sh  run_tests_v2.sh  test_security_fixes.sh
archive/: COMPREHENSIVE_LANGUAGE_SPEC.md
chronos_lib/: json_v3.ch  tcp.ch
compiler/rust/chronos-compiler/: Cargo.toml  README.md
compiler/rust/chronos-compiler/examples/: hello.chronos
compiler/rust/chronos-compiler/src/: codegen.rs  main.rs  parser.rs  validator.rs
docs/: ASSEMBLY_OUTPUT_FORMAT.md  AST_FORMAT_V2.md  BUSINESS_LOGIC_SPEC.md  CHRONOS_CORE_SPEC.md  CHRONOS_LANGUAGE_SPEC_v2.md  CHRONOS_SYNTAX.md  FIRST_PRINCIPLES.md  PRODUCTION_GRADE_SPEC.md  PROMPT_BASED_LANGUAGE.md  SYNTAX_EXPLORATION.md  TYPE_SYSTEM_DESIGN.md  compiler.md  features.md  optimizations.md  stdlib.md  syntax.md
examples/: arrays.ch  benchmark_suite.ch  binary_search.ch  bubble_sort.ch  demo-optimizations.ch  dynamic_token_array.ch  file_io_complete.ch  fizzbuzz.ch  hello.ch  logical_operators.ch  optimization_comparison.ch  optimization_examples.ch  primes.ch  realtime_api_monitor.ch  simple_api_server.ch  structs_complete.ch  typed_arrays.ch
tests/: test_all_new_features.ch  test_ast_debug.ch  test_ast_func.ch  test_ast_minimal.ch  test_ast_read.ch  test_ast_simple.ch  (+62 more)
(+144 files in other folders)
