[package]
name = "chronos-compiler"
version = "0.0.1"
edition = "2021"
authors = ["Chronos Team"]
description = "Template-based deterministic programming language compiler"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "chronos"
path = "src/main.rs"
